--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@ li {
 .container {
   margin-left: auto;
   margin-right: auto;
-  width: 1230px;
+  width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
 }
@@ -89,9 +89,9 @@ main {
   font-family: 'Roboto';
 }
 .main-section {
-  width: 1600px;
-  height: 600px;
-  padding-top: 200px;
+  width: 100%;
+
+  padding: 200px 0px;
   margin-bottom: 94px;
 
   background: var(--bg-hero-and-footer);
