--- a/css/styles.css
+++ b/css/styles.css
@@ -88,7 +88,7 @@ li {
 main {
   font-family: 'Roboto';
 }
-.main-section {
+.hero-section {
   width: 100%;
 
   padding: 200px 0px;
@@ -97,7 +97,17 @@ main {
   background: var(--bg-hero-and-footer);
   text-align: center;
 }
-.main-title {
+.header-team {
+  margin-bottom: 50px;
+
+  text-align: center;
+  font-family: 'Roboto';
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  letter-spacing: 0.03em;
+}
+.hero-title {
   width: 696px;
   color: var(--title-color);
   font-weight: 900;
@@ -148,13 +158,26 @@ main {
   color: var(--description-color);
 }
 .cards {
-  display: flex;
-  flex-direction: row;
-  background: var(--bg-section-team);
+  background-color: var(--title-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
 }
-.card-name {
+.visualy-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+.team-card {
   display: flex;
-  flex-wrap: wrap;
 }
 .work-section-header {
   font-weight: 700;
@@ -167,6 +190,11 @@ main {
 }
 .cards:not(:last-child) {
   margin-right: 30px;
+}
+.team {
+  background-color: var(--bg-section-team);
+
+  padding: 94px;
 }
 .work-gallery {
   display: flex;
@@ -181,6 +209,9 @@ main {
   line-height: 1.18;
   letter-spacing: 0.03em;
   color: var(--second-color);
+  text-align: center;
+  padding-top: 30px;
+  padding-bottom: 10px;
 }
 .card-description {
   font-weight: 400;
@@ -188,16 +219,17 @@ main {
   line-height: 19px;
   letter-spacing: 0.03em;
   color: var(--description-color);
+  text-align: center;
+  padding-bottom: 30px;
 }
 
 /* footer */
-.footer {
-  background: var(--bg-hero-and-footer);
-}
+
 address {
   font-family: 'Roboto';
 }
 .footer-logo {
+  display: inline-block;
   font-family: 'Raleway';
   font-style: normal;
   font-weight: 700;
@@ -205,6 +237,8 @@ address {
   line-height: 1.19;
   letter-spacing: 0.03em;
   color: var(--main-color);
+
+  margin-bottom: 20px;
 }
 .span-footer-logo {
   color: var(--title-color);
@@ -224,8 +258,14 @@ address {
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
+  margin-bottom: 60px;
 }
-
+.footer-items:not(:last-child) {
+  margin-bottom: 9px;
+}
+.footer-contacts:last-child {
+  margin-bottom: 60px;
+}
 /* Portfolio */
 
 .menu-items {
@@ -258,7 +298,7 @@ address {
   letter-spacing: 0.06em;
   color: var(--second-color);
 }
-.card-description {
+.card-descriptions {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.8;
@@ -268,4 +308,11 @@ address {
 .footer-contacts:hover,
 .footer-contacts:focus {
   color: var(--main-color);
+}
+
+.section-footer {
+  background: var(--bg-hero-and-footer);
+  padding-bottom: 60px;
+
+  padding-top: 60px;
 }
