--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@ li {
 .container {
   margin-left: auto;
   margin-right: auto;
-  width: 1230px;
+  width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
 }
@@ -329,12 +329,22 @@ address {
 .content-list {
   display: flex;
   flex-wrap: wrap;
+  flex-basis: calc(100% / 3 - 20px);
+  margin-left: -20px;
+  margin-top: -20px;
 }
 .content-items {
+  margin-top: 15px;
   margin-right: 30px;
-  margin-bottom: 30px;
+  margin-bottom: 15px;
   border: 1px solid #eeeeee;
 }
 .content-items:nth-child(3n) {
   margin-right: 0px;
+}
+.content-items:nth-last-child(-n + 3) {
+  margin-bottom: 94px;
+}
+.content-items:nth-child(-n + 3) {
+  margin-top: 0px;
 }
